Removed 'overflow-x: hidden' from container and body classes as it was causing double scrollbars and cutting off content. Removed version number from NavigationBar component:  https://github.com/genome-one/sanford/issues/165 https://github.com/genome-one/sanford/issues/166

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -9,11 +9,6 @@ body {
   font-family: sans-serif;
   font-size: 16px;
   background-color: rgb(248, 248, 251);
-  overflow-x: hidden;
-}
-
-.container {
-	overflow-x: hidden;
 }
 
 .App {
